Dodano search dugme

--- a/plusUltraZadaca1.html
+++ b/plusUltraZadaca1.html
@@ -12,7 +12,8 @@
     </p>
     <p>
         <form>
-            <input type="Search" Placeholder="Search Wikipedia">
+            <input type="Text" name="Search" id="Search" Placeholder="Search Wikipedia">
+            <button type="Submit">Search</button>
         </form>
     </p>
         <table>
